fix header image alignment on mobile

--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -41,6 +41,7 @@ header {
   header {
     color: $feature-image-text-color;
     background-size: $feature-image-size;
+    background-position-x: center;
     margin-bottom: 0;
     padding: $padding-large/2.5 $padding-large;
     .meta {
